# shutter-encoder-flatpak

./: CMakeLists.txt  README.md  ShutterEncoder.sh  build_metainfo.py  org.paulpacifico.ShutterEncoder.desktop  org.paulpacifico.ShutterEncoder.metainfo.xml  org.paulpacifico.ShutterEncoder.yaml
